--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@glue42/desktop": "^5.7.1",
+    "@glue42/theme": "^4.0.5",
     "http-server": "^14.1.0",
     "typescript": "^4.4.4"
   }
